# matrix-iterative-solver

./: Cargo.toml
examples/: test_jacobi.rs
src/: input.rs  lib.rs  main.rs
src/solvers/: iterative_solver.rs  jacobi.rs  mod.rs
