[package]
name = "matrix-iterative-solver"
version = "0.1.0"
edition = "2024"
authors = ["zFishStick"]
description = "Library containing iterative algorithms to find solutions for sparse matrices"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zFishStick/matrix-iterative-solver"
exclude = [
    "main.rs",
    "test/*"
]

[dependencies]
matrix-market-rs = "0.1.3"
nalgebra = "0.34.1"
nalgebra-sparse = "0.11.0"
num-traits = "0.2.19"
